fixed blogposts not showing

--- a/src/assets/css/blog.scss
+++ b/src/assets/css/blog.scss
@@ -169,6 +169,9 @@ $easings:(
     &__metasmall{
         font-size: small;
     }
+    &__left{
+        padding-left: 3rem;
+    }
 }
 
 .nolink{
